# freelance-finance-backend

./: .env  README.md  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
app/core/: config.py
app/database/: session.py
app/models/: __init__.py  client.py  expense.py  invoice.py  project.py  user.py
migrations/: env.py
migrations/versions/: 271e247603ad_init.py
