[project]
name = "freelance-finance-backend-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "black>=25.12.0",
    "celery>=5.6.0",
    "coverage>=7.13.0",
    "fastapi>=0.124.0",
    "mypy>=1.19.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "redis>=7.1.0",
    "ruff>=0.14.8",
    "sqlalchemy[asyncio]>=2.0.44",
    "uvicorn>=0.38.0",
]
